--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Component library for Tripsr",
   "main": "index.js",
   "scripts": {
-    "build":
-      "rm -rf dist/* && babel . --out-dir dist --ignore node_modules, dist --source-maps",
-    "test": "jest"
+    "test": "jest --coverage test"
   },
   "jest": {
     "preset": "react-native"
@@ -39,10 +37,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-jest": "^22.4.3",
+    "coveralls": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
+    "istanbul": "^0.4.5",
     "jest": "^22.4.3",
     "prettier": "^1.12.1",
     "react-test-renderer": "^16.3.2"
